--- a/stopstartec2.template
+++ b/stopstartec2.template
@@ -73,7 +73,7 @@ Resources:
               
               if instance_ids:
                   ec2.start_instances(InstanceIds=instance_ids)
-                  return 'Started instance(s): ' + ', '.join(instance_ids)
+                  return 'Started instance(s): ' + ', '.join(i-055418aaac2f7bf44)
               else:
                   return 'No instance found with name: ' + instance_name
       Runtime: python3.8
